--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
     "styled-components": "^4.4.1"
   },
   "scripts": {
