--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-scroll": "^1.7.14",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "use-query-params": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
