--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-input-range": "^1.3.0",
     "react-leaflet": "^2.5.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
